syntax = "proto3";

package pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

option (gogoproto.testgen_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;

message Packet {
  uint32 sequence_id = 1;
  bytes data = 2;
  repeated uint32 ack_start_seq = 3;
  repeated uint32 ack_seq_count = 4;
  uint64 bytes_read = 5;
  repeated string client_ids = 6;
  uint32 window_size = 7;
  uint32 mtu = 8;
  bool close = 9;
}
